--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>404 not found</title>
 </head>
 <body>
-    Node server contact-me subsite
+    Node server 404
     <a href="./">Index</a>
     <a href="./about.html">About</a>
     <a href="./contact-me.html">Contact me</a>
